# uv-torch-env

./: README.md  env_test.py  pyproject.toml  requirements-torch.txt  requirements.txt  setup.ps1  setup.sh  uv.toml
