[project]
name = "uv-torch-env"
version = "0.1.0"
description = "A minimal example of using `uv` with PyTorch."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.26.3",
    "setuptools==69.5.1",
    "torch==2.3.1+cu121",
    "torchaudio==2.3.1+cu121",
    "torchvision==0.18.1+cu121",
    "MarkupSafe>=2.1.5,<3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
