[project]
name = "uv-torch-env"
version = "0.2.0"
description = "A minimal example of using `uv` with PyTorch."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy>=2.2.5",
    "setuptools>=78.1.1",
    "torch==2.6.0+cu124",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
