[project]
name = "uv-torch-env"
version = "0.2.0"
description = "A minimal example of using `uv` with PyTorch."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.2.5",
    "setuptools>=78.1.1",
    "torch==2.7.1+cu126",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
